# digital-church

./: .gitignore  .replit  BRAIN_V2_IMPLEMENTATION.md  CLAUDE.md  CORPUS_STATE.md  Master Instructions.docx  SPEC.md  analysis_engine.py  analyze_hope_keywords.py  audit_flips.py  build_rss_transcript_database.py  build_rss_transcript_database_tier1_tier2.py  calibration_report.py  channels.csv  compare_v5_3_to_v5_4.py  digital_pulpit_config.json  discover_subsplash_urls_bing.py  export_transcript_quality_sample.sql  extract_channel_ids.py  extract_channel_ids_slow.py  feeds.txt  final_calibration_report.py  generate_corpus_report.py  generate_spot_check.py  main.py  process_apple_podcast_feeds.py  process_single_rss_feed.py  pulpit.db  pyproject.toml  reanalyze_all.py  replit.md  rss_transcription_tier1_tier2_report_15.txt  run_full_corpus_regeneration.py  run_single_video_experiment.py  run_summary_v2_experiment.py  run_vacuum_scheduled.sh  schema.sql  script_generator.py  sermon_feeds.txt  sermon_feeds_2.txt  (+5 more)
.devcontainer/: devcontainer.json
attached_assets/: Pasted-Master-Instruction-The-Digital-Pulpit-Intelligence-Engi_1770907767159.txt  Pasted-import-logging-import-os-from-engine-config-import-load_1770946672195.txt  channels_1771074604061.csv
data/: channels.csv  channels_complete_report.csv  channels_curated.csv  channels_with_ids.csv  digital_pulpit_config.json
db_backup/: digital_pulpit_backup.db
docs/: digital-pulpit-architecture.md  digital-pulpit-decisions.md  digital-pulpit-principles.md  digital-pulpit-review.md  digital-pulpit-session-playbook.md  (+2 more)
(+38 files in other folders)
